# python-project-83

./: .env.example  .gitignore  Makefile  README.md  database.sql  file.py  pyproject.toml
.github/workflows/: boilerplate.yml  hexlet-check.yml
hexlet-code/: __init__.py
hexlet-code/templates/: base.html
hexlet-code/templates/urls/: show_url.html  urls.html
page_analyzer/: __init__.py  app.py  database.py  sql_queries.py  validate.py
page_analyzer/templates/: index.html
page_analyzer/templates/urls/: show_url.html  urls.html
