[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
authors = ["Vanya <curagin.vanya@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
gunicorn = "^21.2.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
