[tool.poetry]
name = "page_analyzer"
version = "0.1.0"
description = "Page Analyzer"
authors = ["Vanya <curagin.vanya@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
gunicorn = "^21.2.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
validators = "^0.28.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
