[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
authors = ["Vanya <curagin.vanya@yandex.ru>"]
readme = "README.md"
classifiers = [
	"Programming Language :: Python :: 3.10",
	"Topic :: Utilities"
]
repository = "https://github.com/JduMoment/python-project-83"
packages = [
	{include = "page_analyzer"},
]

[tool.poetry.scripts]
page_analyzer = "page_analyzer.app:main"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
gunicorn = "^21.2.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
validators = "^0.28.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
